testdata/aws/ec2/route_table_idempotency.json
{
  "Source": {
    "retrieved_on": "2026-09-16T11:29:57.427827+00:00",
    "account": "000000000000",
    "region": "us-east-1",
    "aws_documentation": [
      "https://docs.aws.amazon.com/AWSEC2/latest/APIReference/API_CreateRouteTable.html",
      "https://docs.aws.amazon.com/ec2/latest/devguide/ec2-api-idempotency.html"
    ],
    "aws_documentation_revision": "AWS live documentation; immutable revision not exposed",
    "transport": "scripts/aws/aws_cli.py; only response XML persisted, authentication debug discarded",
    "ownership_prefix": "stackd-rt-token-fed997dae4",
    "initial_ownership_prefix": "stackd-acl-token-c3557c4432"
  },
  "Calls": [
    {
      "label": "owned_vpc_primary",
      "service": "ec2",
      "operation": "CreateVpc",
      "input": {
        "CidrBlock": "10.244.0.0/24",
        "TagSpecifications": [
          {
            "ResourceType": "vpc",
            "Tags": [
              {
                "Key": "Name",
                "Value": "owned_vpc_primary-stackd-acl-token-c3557c4432"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-acl-token-c3557c4432"
              }
            ]
          }
        ]
      },
      "output": {
        "Vpc": {
          "OwnerId": "000000000000",
          "InstanceTenancy": "default",
          "Ipv6CidrBlockAssociationSet": [],
          "CidrBlockAssociationSet": [
            {
              "AssociationId": "vpc-cidr-assoc-0a4ea5f27db37b6e8",
              "CidrBlock": "10.244.0.0/24",
              "CidrBlockState": {
                "State": "associated"
              }
            }
          ],
          "IsDefault": false,
          "Tags": [
            {
              "Key": "stackd-probe",
              "Value": "stackd-acl-token-c3557c4432"
            },
            {
              "Key": "Name",
              "Value": "owned_vpc_primary-stackd-acl-token-c3557c4432"
            }
          ],
          "VpcId": "vpc-04320d4f01d32b3c5",
          "State": "pending",
          "CidrBlock": "10.244.0.0/24",
          "DhcpOptionsId": "dopt-0f7ace7ebae95c51e"
        }
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:29:19.642940+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<CreateVpcResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>4e37c9d3-40c6-4d73-9a33-59f5a0ebca27</requestId><vpc><vpcId>vpc-04320d4f01d32b3c5</vpcId><ownerId>000000000000</ownerId><state>pending</state><cidrBlock>10.244.0.0/24</cidrBlock><cidrBlockAssociationSet><item><cidrBlock>10.244.0.0/24</cidrBlock><associationId>vpc-cidr-assoc-0a4ea5f27db37b6e8</associationId><cidrBlockState><state>associated</state> [...]
      "request_id": "4e37c9d3-40c6-4d73-9a33-59f5a0ebca27"
    },
    {
      "label": "explicit_token_initial",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "ClientToken": "stackd-acl-token-c3557c4432-original",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-acl-token-c3557c4432-original"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-acl-token-c3557c4432"
              }
            ]
          }
        ]
      },
      "output": {
        "RouteTable": {
          "Associations": [],
          "PropagatingVgws": [],
          "RouteTableId": "rtb-0d2b08e3576252150",
          "Routes": [
            {
              "DestinationCidrBlock": "10.244.0.0/24",
              "GatewayId": "local",
              "Origin": "CreateRouteTable",
              "State": "active"
            }
          ],
          "Tags": [
            {
              "Key": "stackd-probe",
              "Value": "stackd-acl-token-c3557c4432"
            },
            {
              "Key": "Name",
              "Value": "stackd-acl-token-c3557c4432-original"
            }
          ],
          "VpcId": "vpc-04320d4f01d32b3c5",
          "OwnerId": "000000000000"
        },
        "ClientToken": "stackd-acl-token-c3557c4432-original"
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:29:20.858378+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<CreateRouteTableResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>a991bfe0-cb13-426d-8a1f-2ad7574b1e67</requestId><routeTable><routeTableId>rtb-0d2b08e3576252150</routeTableId><vpcId>vpc-04320d4f01d32b3c5</vpcId><ownerId>000000000000</ownerId><routeSet><item><destinationCidrBlock>10.244.0.0/24</destinationCidrBlock><gatewayId>local</gatewayId><state>active</state><origin>CreateRouteTable</origin></item></ [...]
      "request_id": "a991bfe0-cb13-426d-8a1f-2ad7574b1e67"
    },
    {
      "label": "explicit_token_identical_repeat",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "ClientToken": "stackd-acl-token-c3557c4432-original",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-acl-token-c3557c4432-original"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-acl-token-c3557c4432"
              }
            ]
          }
        ]
      },
      "output": {
        "RouteTable": {
          "Associations": [],
          "PropagatingVgws": [],
          "RouteTableId": "rtb-0d2b08e3576252150",
          "Routes": [
            {
              "DestinationCidrBlock": "10.244.0.0/24",
              "GatewayId": "local",
              "Origin": "CreateRouteTable",
              "State": "active"
            }
          ],
          "Tags": [
            {
              "Key": "Name",
              "Value": "stackd-acl-token-c3557c4432-original"
            },
            {
              "Key": "stackd-probe",
              "Value": "stackd-acl-token-c3557c4432"
            }
          ],
          "VpcId": "vpc-04320d4f01d32b3c5",
          "OwnerId": "000000000000"
        },
        "ClientToken": "stackd-acl-token-c3557c4432-original"
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:29:21.790527+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<CreateRouteTableResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>8ffa43bd-f664-4883-83d5-1af8adadd63d</requestId><routeTable><routeTableId>rtb-0d2b08e3576252150</routeTableId><vpcId>vpc-04320d4f01d32b3c5</vpcId><ownerId>000000000000</ownerId><routeSet><item><destinationCidrBlock>10.244.0.0/24</destinationCidrBlock><gatewayId>local</gatewayId><state>active</state><origin>CreateRouteTable</origin></item></ [...]
      "request_id": "8ffa43bd-f664-4883-83d5-1af8adadd63d"
    },
    {
      "label": "same_token_changed_tags",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "ClientToken": "stackd-acl-token-c3557c4432-original",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-acl-token-c3557c4432-changed-request"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-acl-token-c3557c4432"
              }
            ]
          }
        ]
      },
      "output": {},
      "code": "IdempotentParameterMismatch",
      "http_status": 400,
      "started_at": "2026-09-16T11:29:22.684996+00:00",
      "message": "Wrong arguments for request with token stackd-acl-token-c3557c4432-original",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>IdempotentParameterMismatch</Code><Message>Wrong arguments for request with token stackd-acl-token-c3557c4432-original</Message></Error></Errors><RequestID>c06484fa-6906-445f-bebf-d9aea798bb82</RequestID></Response>",
      "request_id": "c06484fa-6906-445f-bebf-d9aea798bb82"
    },
    {
      "label": "describe_after_changed_request",
      "service": "ec2",
      "operation": "DescribeRouteTables",
      "input": {
        "RouteTableIds": [
          "rtb-0d2b08e3576252150"
        ]
      },
      "output": {
        "RouteTables": [
          {
            "Associations": [],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0d2b08e3576252150",
            "Routes": [
              {
                "DestinationCidrBlock": "10.244.0.0/24",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
              }
            ],
            "Tags": [
              {
                "Key": "stackd-probe",
                "Value": "stackd-acl-token-c3557c4432"
              },
              {
                "Key": "Name",
                "Value": "stackd-acl-token-c3557c4432-original"
              }
            ],
            "VpcId": "vpc-04320d4f01d32b3c5",
            "OwnerId": "000000000000"
          }
        ]
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:29:23.545994+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DescribeRouteTablesResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>4c468520-e9cd-444c-8815-244891b01a6e</requestId><routeTableSet><item><routeTableId>rtb-0d2b08e3576252150</routeTableId><vpcId>vpc-04320d4f01d32b3c5</vpcId><ownerId>000000000000</ownerId><routeSet><item><destinationCidrBlock>10.244.0.0/24</destinationCidrBlock><gatewayId>local</gatewayId><state>active</state><origin>CreateRouteTable</orig [...]
      "request_id": "4c468520-e9cd-444c-8815-244891b01a6e"
    },
    {
      "label": "native_account_preflight_reconfirmed",
      "service": "sts",
      "operation": "GetCallerIdentity",
      "input": {},
      "output": {
        "UserId": "AIDAQAAAAAAAMEZHRHAHY",
        "Account": "000000000000",
        "Arn": "arn:aws:iam::000000000000:user/Delegated"
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:30:24.162269+00:00",
      "rawResponseBody": "<GetCallerIdentityResponse xmlns=\"https://sts.amazonaws.com/doc/2011-06-15/\">\n  <GetCallerIdentityResult>\n    <Arn>arn:aws:iam::000000000000:user/Delegated</Arn>\n    <UserId>AIDAQAAAAAAAMEZHRHAHY</UserId>\n    <Account>000000000000</Account>\n  </GetCallerIdentityResult>\n  <ResponseMetadata>\n    <RequestId>829415ed-38aa-49da-8691-75e0db6eccb5</RequestId>\n  </ResponseMetadata>\n</GetCallerIdentityResponse>\n",
      "request_id": "829415ed-38aa-49da-8691-75e0db6eccb5"
    },
    {
      "label": "owned_vpc_scope_comparison",
      "service": "ec2",
      "operation": "CreateVpc",
      "input": {
        "CidrBlock": "10.244.1.0/24",
        "TagSpecifications": [
          {
            "ResourceType": "vpc",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-scope"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              }
            ]
          }
        ]
      },
      "output": {
        "Vpc": {
          "OwnerId": "000000000000",
          "InstanceTenancy": "default",
          "Ipv6CidrBlockAssociationSet": [],
          "CidrBlockAssociationSet": [
            {
              "AssociationId": "vpc-cidr-assoc-0952c6da3d3b6a7ce",
              "CidrBlock": "10.244.1.0/24",
              "CidrBlockState": {
                "State": "associated"
              }
            }
          ],
          "IsDefault": false,
          "Tags": [
            {
              "Key": "stackd-probe",
              "Value": "stackd-rt-token-fed997dae4"
            },
            {
              "Key": "Name",
              "Value": "stackd-rt-token-fed997dae4-scope"
            }
          ],
          "VpcId": "vpc-0fb4e8a6530ecf902",
          "State": "pending",
          "CidrBlock": "10.244.1.0/24",
          "DhcpOptionsId": "dopt-0f7ace7ebae95c51e"
        }
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:30:24.862565+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<CreateVpcResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>6305f879-fb1c-4c79-af14-02cd6d433f82</requestId><vpc><vpcId>vpc-0fb4e8a6530ecf902</vpcId><ownerId>000000000000</ownerId><state>pending</state><cidrBlock>10.244.1.0/24</cidrBlock><cidrBlockAssociationSet><item><cidrBlock>10.244.1.0/24</cidrBlock><associationId>vpc-cidr-assoc-0952c6da3d3b6a7ce</associationId><cidrBlockState><state>associated</state> [...]
      "request_id": "6305f879-fb1c-4c79-af14-02cd6d433f82"
    },
    {
      "label": "same_token_changed_vpc",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-0fb4e8a6530ecf902",
        "ClientToken": "stackd-acl-token-c3557c4432-original",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-acl-token-c3557c4432-original"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-acl-token-c3557c4432"
              }
            ]
          }
        ]
      },
      "output": {
        "Code": "IdempotentParameterMismatch",
        "Message": "Wrong arguments for request with token stackd-acl-token-c3557c4432-original",
        "RequestID": "15ea7eca-5eb4-4ac9-8c90-857ee977c5f1"
      },
      "code": "IdempotentParameterMismatch",
      "http_status": 400,
      "started_at": "2026-09-16T11:30:26.061046+00:00",
      "message": "Wrong arguments for request with token stackd-acl-token-c3557c4432-original",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>IdempotentParameterMismatch</Code><Message>Wrong arguments for request with token stackd-acl-token-c3557c4432-original</Message></Error></Errors><RequestID>15ea7eca-5eb4-4ac9-8c90-857ee977c5f1</RequestID></Response>",
      "request_id": "15ea7eca-5eb4-4ac9-8c90-857ee977c5f1"
    },
    {
      "label": "mutate_route_table_tags",
      "service": "ec2",
      "operation": "CreateTags",
      "input": {
        "Resources": [
          "rtb-0d2b08e3576252150"
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "stackd-rt-token-fed997dae4-mutated"
          },
          {
            "Key": "ReplayMutation",
            "Value": "current-state"
          }
        ]
      },
      "output": {},
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:30:26.918970+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<CreateTagsResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>9ce8fa10-0761-4000-b5e6-22339814c7b9</requestId><return>true</return></CreateTagsResponse>",
      "request_id": "9ce8fa10-0761-4000-b5e6-22339814c7b9"
    },
    {
      "label": "describe_after_tag_mutation",
      "service": "ec2",
      "operation": "DescribeRouteTables",
      "input": {
        "RouteTableIds": [
          "rtb-0d2b08e3576252150"
        ]
      },
      "output": {
        "RouteTables": [
          {
            "Associations": [],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0d2b08e3576252150",
            "Routes": [
              {
                "DestinationCidrBlock": "10.244.0.0/24",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
              }
            ],
            "Tags": [
              {
                "Key": "stackd-probe",
                "Value": "stackd-acl-token-c3557c4432"
              },
              {
                "Key": "ReplayMutation",
                "Value": "current-state"
              },
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-mutated"
              }
            ],
            "VpcId": "vpc-04320d4f01d32b3c5",
            "OwnerId": "000000000000"
          }
        ]
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:30:27.836916+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DescribeRouteTablesResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>440223d0-5430-4204-80ed-b5588d802254</requestId><routeTableSet><item><routeTableId>rtb-0d2b08e3576252150</routeTableId><vpcId>vpc-04320d4f01d32b3c5</vpcId><ownerId>000000000000</ownerId><routeSet><item><destinationCidrBlock>10.244.0.0/24</destinationCidrBlock><gatewayId>local</gatewayId><state>active</state><origin>CreateRouteTable</orig [...]
      "request_id": "440223d0-5430-4204-80ed-b5588d802254"
    },
    {
      "label": "original_token_replay_after_tag_mutation",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "ClientToken": "stackd-acl-token-c3557c4432-original",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-acl-token-c3557c4432-original"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-acl-token-c3557c4432"
              }
            ]
          }
        ]
      },
      "output": {
        "RouteTable": {
          "Associations": [],
          "PropagatingVgws": [],
          "RouteTableId": "rtb-0d2b08e3576252150",
          "Routes": [
            {
              "DestinationCidrBlock": "10.244.0.0/24",
              "GatewayId": "local",
              "Origin": "CreateRouteTable",
              "State": "active"
            }
          ],
          "Tags": [
            {
              "Key": "Name",
              "Value": "stackd-acl-token-c3557c4432-original"
            },
            {
              "Key": "stackd-probe",
              "Value": "stackd-acl-token-c3557c4432"
            }
          ],
          "VpcId": "vpc-04320d4f01d32b3c5",
          "OwnerId": "000000000000"
        },
        "ClientToken": "stackd-acl-token-c3557c4432-original"
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:30:28.662648+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<CreateRouteTableResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>ce432974-34e7-4cd0-951b-a44c0454253a</requestId><routeTable><routeTableId>rtb-0d2b08e3576252150</routeTableId><vpcId>vpc-04320d4f01d32b3c5</vpcId><ownerId>000000000000</ownerId><routeSet><item><destinationCidrBlock>10.244.0.0/24</destinationCidrBlock><gatewayId>local</gatewayId><state>active</state><origin>CreateRouteTable</origin></item></ [...]
      "request_id": "ce432974-34e7-4cd0-951b-a44c0454253a"
    },
    {
      "label": "delete_original_route_table",
      "service": "ec2",
      "operation": "DeleteRouteTable",
      "input": {
        "RouteTableId": "rtb-0d2b08e3576252150"
      },
      "output": {},
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:30:29.533557+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DeleteRouteTableResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>322e6dad-6df2-4b2d-9308-53c43dd5207d</requestId><return>true</return></DeleteRouteTableResponse>",
      "request_id": "322e6dad-6df2-4b2d-9308-53c43dd5207d"
    },
    {
      "label": "original_token_replay_after_deletion",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "ClientToken": "stackd-acl-token-c3557c4432-original",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-acl-token-c3557c4432-original"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-acl-token-c3557c4432"
              }
            ]
          }
        ]
      },
      "output": {
        "Code": "IdempotentParameterMismatch",
        "Message": "An error occurred (IdempotentParameterMismatch) when calling this operation: The client token and arguments used in this request were used in a prior request that was associated with a resource which is now deleted.",
        "RequestID": "5a013659-70b5-4188-8de3-d3938ab07a26"
      },
      "code": "IdempotentParameterMismatch",
      "http_status": 400,
      "started_at": "2026-09-16T11:30:30.466021+00:00",
      "message": "The client token and arguments used in this request were used in a prior request that was associated with a resource which is now deleted.</Message></Error></Errors><RequestID>5a013659-70b5-4188-8de3-d3938ab07a26</RequestID></Response>'",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>IdempotentParameterMismatch</Code><Message>An error occurred (IdempotentParameterMismatch) when calling this operation: The client token and arguments used in this request were used in a prior request that was associated with a resource which is now deleted.</Message></Error></Errors><RequestID>5a013659-70b5-4188-8de3-d3938ab07a26</RequestID></Response>",
      "request_id": "5a013659-70b5-4188-8de3-d3938ab07a26"
    },
    {
      "label": "describe_original_id_after_deleted_replay",
      "service": "ec2",
      "operation": "DescribeRouteTables",
      "input": {
        "RouteTableIds": [
          "rtb-0d2b08e3576252150"
        ]
      },
      "output": {
        "Code": "InvalidRouteTableID.NotFound",
        "Message": "The routeTable ID 'rtb-0d2b08e3576252150' does not exist",
        "RequestID": "3444524b-4edc-46c8-83d1-1c8f17b86b92"
      },
      "code": "InvalidRouteTableID.NotFound",
      "http_status": 400,
      "started_at": "2026-09-16T11:30:31.276128+00:00",
      "message": "The routeTable ID 'rtb-0d2b08e3576252150' does not exist",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InvalidRouteTableID.NotFound</Code><Message>The routeTable ID 'rtb-0d2b08e3576252150' does not exist</Message></Error></Errors><RequestID>3444524b-4edc-46c8-83d1-1c8f17b86b92</RequestID></Response>",
      "request_id": "3444524b-4edc-46c8-83d1-1c8f17b86b92"
    },
    {
      "label": "token_empty",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-bounds"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              }
            ]
          }
        ],
        "ClientToken": ""
      },
      "output": {
        "Code": "InvalidParameterValue",
        "Message": "Value () for parameter clientToken is invalid",
        "RequestID": "7e2b886a-8066-4d22-8e1b-da974a4fadb8"
      },
      "code": "InvalidParameterValue",
      "http_status": 400,
      "started_at": "2026-09-16T11:30:47.746150+00:00",
      "message": "Value () for parameter clientToken is invalid",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InvalidParameterValue</Code><Message>Value () for parameter clientToken is invalid</Message></Error></Errors><RequestID>7e2b886a-8066-4d22-8e1b-da974a4fadb8</RequestID></Response>",
      "request_id": "7e2b886a-8066-4d22-8e1b-da974a4fadb8"
    },
    {
      "label": "token_empty_repeat",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-bounds"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              }
            ]
          }
        ],
        "ClientToken": ""
      },
      "output": {
        "Code": "InvalidParameterValue",
        "Message": "Value () for parameter clientToken is invalid",
        "RequestID": "4b9112a3-8218-4062-a142-d9ef40074614"
      },
      "code": "InvalidParameterValue",
      "http_status": 400,
      "started_at": "2026-09-16T11:30:48.563834+00:00",
      "message": "Value () for parameter clientToken is invalid",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InvalidParameterValue</Code><Message>Value () for parameter clientToken is invalid</Message></Error></Errors><RequestID>4b9112a3-8218-4062-a142-d9ef40074614</RequestID></Response>",
      "request_id": "4b9112a3-8218-4062-a142-d9ef40074614"
    },
    {
      "label": "token_space",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-bounds"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              }
            ]
          }
        ],
        "ClientToken": " "
      },
      "output": {
        "RouteTable": {
          "Associations": [],
          "PropagatingVgws": [],
          "RouteTableId": "rtb-073bbf78f9bd70f2b",
          "Routes": [
            {
              "DestinationCidrBlock": "10.244.0.0/24",
              "GatewayId": "local",
              "Origin": "CreateRouteTable",
              "State": "active"
            }
          ],
          "Tags": [
            {
              "Key": "stackd-probe",
              "Value": "stackd-rt-token-fed997dae4"
            },
            {
              "Key": "Name",
              "Value": "stackd-rt-token-fed997dae4-bounds"
            }
          ],
          "VpcId": "vpc-04320d4f01d32b3c5",
          "OwnerId": "000000000000"
        }
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:30:49.337454+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<CreateRouteTableResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>6dd4e8ea-10a0-44c6-8dff-f29e5445dad6</requestId><routeTable><routeTableId>rtb-073bbf78f9bd70f2b</routeTableId><vpcId>vpc-04320d4f01d32b3c5</vpcId><ownerId>000000000000</ownerId><routeSet><item><destinationCidrBlock>10.244.0.0/24</destinationCidrBlock><gatewayId>local</gatewayId><state>active</state><origin>CreateRouteTable</origin></item></ [...]
      "request_id": "6dd4e8ea-10a0-44c6-8dff-f29e5445dad6"
    },
    {
      "label": "token_unicode",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-bounds"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              }
            ]
          }
        ],
        "ClientToken": "é"
      },
      "output": {
        "Code": "InvalidParameterValue",
        "Message": "Value (é) for parameter clientToken is invalid",
        "RequestID": "a6755459-2ffa-4712-8c93-6ba6d78378de"
      },
      "code": "InvalidParameterValue",
      "http_status": 400,
      "started_at": "2026-09-16T11:30:50.285549+00:00",
      "message": "Value (é) for parameter clientToken is invalid",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InvalidParameterValue</Code><Message>Value (é) for parameter clientToken is invalid</Message></Error></Errors><RequestID>a6755459-2ffa-4712-8c93-6ba6d78378de</RequestID></Response>",
      "request_id": "a6755459-2ffa-4712-8c93-6ba6d78378de"
    },
    {
      "label": "token_length_64",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-bounds"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              }
            ]
          }
        ],
        "ClientToken": "rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr"
      },
      "output": {
        "RouteTable": {
          "Associations": [],
          "PropagatingVgws": [],
          "RouteTableId": "rtb-0d257f728f70f4c43",
          "Routes": [
            {
              "DestinationCidrBlock": "10.244.0.0/24",
              "GatewayId": "local",
              "Origin": "CreateRouteTable",
              "State": "active"
            }
          ],
          "Tags": [
            {
              "Key": "stackd-probe",
              "Value": "stackd-rt-token-fed997dae4"
            },
            {
              "Key": "Name",
              "Value": "stackd-rt-token-fed997dae4-bounds"
            }
          ],
          "VpcId": "vpc-04320d4f01d32b3c5",
          "OwnerId": "000000000000"
        },
        "ClientToken": "rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr"
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:30:51.087470+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<CreateRouteTableResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>a5306a09-7b9c-4d77-aacb-1420d4d1f27f</requestId><routeTable><routeTableId>rtb-0d257f728f70f4c43</routeTableId><vpcId>vpc-04320d4f01d32b3c5</vpcId><ownerId>000000000000</ownerId><routeSet><item><destinationCidrBlock>10.244.0.0/24</destinationCidrBlock><gatewayId>local</gatewayId><state>active</state><origin>CreateRouteTable</origin></item></ [...]
      "request_id": "a5306a09-7b9c-4d77-aacb-1420d4d1f27f"
    },
    {
      "label": "token_length_65",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-bounds"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              }
            ]
          }
        ],
        "ClientToken": "sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss"
      },
      "output": {
        "Code": "InvalidParameterValue",
        "Message": "Value (sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss) for parameter clientToken is invalid",
        "RequestID": "9eaea7b7-2a80-4328-b21e-44c6e6ea5b1b"
      },
      "code": "InvalidParameterValue",
      "http_status": 400,
      "started_at": "2026-09-16T11:30:51.983001+00:00",
      "message": "Value (sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss) for parameter clientToken is invalid",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InvalidParameterValue</Code><Message>Value (sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss) for parameter clientToken is invalid</Message></Error></Errors><RequestID>9eaea7b7-2a80-4328-b21e-44c6e6ea5b1b</RequestID></Response>",
      "request_id": "9eaea7b7-2a80-4328-b21e-44c6e6ea5b1b"
    },
    {
      "label": "token_control",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-bounds"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              }
            ]
          }
        ],
        "ClientToken": "tab\tvalue"
      },
      "output": {
        "RouteTable": {
          "Associations": [],
          "PropagatingVgws": [],
          "RouteTableId": "rtb-0411c8dda856b8552",
          "Routes": [
            {
              "DestinationCidrBlock": "10.244.0.0/24",
              "GatewayId": "local",
              "Origin": "CreateRouteTable",
              "State": "active"
            }
          ],
          "Tags": [
            {
              "Key": "stackd-probe",
              "Value": "stackd-rt-token-fed997dae4"
            },
            {
              "Key": "Name",
              "Value": "stackd-rt-token-fed997dae4-bounds"
            }
          ],
          "VpcId": "vpc-04320d4f01d32b3c5",
          "OwnerId": "000000000000"
        },
        "ClientToken": "tab\tvalue"
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:30:52.804330+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<CreateRouteTableResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>95d05f3f-6ce3-4f2b-a6a1-7ec0d2a9bba1</requestId><routeTable><routeTableId>rtb-0411c8dda856b8552</routeTableId><vpcId>vpc-04320d4f01d32b3c5</vpcId><ownerId>000000000000</ownerId><routeSet><item><destinationCidrBlock>10.244.0.0/24</destinationCidrBlock><gatewayId>local</gatewayId><state>active</state><origin>CreateRouteTable</origin></item></ [...]
      "request_id": "95d05f3f-6ce3-4f2b-a6a1-7ec0d2a9bba1"
    },
    {
      "label": "snapshot_initial",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "ClientToken": "stackd-rt-token-fed997dae4-snapshot",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-snapshot"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              }
            ]
          }
        ]
      },
      "output": {
        "RouteTable": {
          "Associations": [],
          "PropagatingVgws": [],
          "RouteTableId": "rtb-0345505fe340256b5",
          "Routes": [
            {
              "DestinationCidrBlock": "10.244.0.0/24",
              "GatewayId": "local",
              "Origin": "CreateRouteTable",
              "State": "active"
            }
          ],
          "Tags": [
            {
              "Key": "stackd-probe",
              "Value": "stackd-rt-token-fed997dae4"
            },
            {
              "Key": "Name",
              "Value": "stackd-rt-token-fed997dae4-snapshot"
            }
          ],
          "VpcId": "vpc-04320d4f01d32b3c5",
          "OwnerId": "000000000000"
        },
        "ClientToken": "stackd-rt-token-fed997dae4-snapshot"
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:31:19.924939+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<CreateRouteTableResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>43f8d9db-17fd-41e6-8800-f23f473d5043</requestId><routeTable><routeTableId>rtb-0345505fe340256b5</routeTableId><vpcId>vpc-04320d4f01d32b3c5</vpcId><ownerId>000000000000</ownerId><routeSet><item><destinationCidrBlock>10.244.0.0/24</destinationCidrBlock><gatewayId>local</gatewayId><state>active</state><origin>CreateRouteTable</origin></item></ [...]
      "request_id": "43f8d9db-17fd-41e6-8800-f23f473d5043"
    },
    {
      "label": "snapshot_mutate_tags",
      "service": "ec2",
      "operation": "CreateTags",
      "input": {
        "Resources": [
          "rtb-0345505fe340256b5"
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "stackd-rt-token-fed997dae4-current"
          },
          {
            "Key": "ReplayMutation",
            "Value": "current-state"
          }
        ]
      },
      "output": {},
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:31:20.857051+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<CreateTagsResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>f1ded3e7-d5bd-4dc0-a772-f0d95fadb6dc</requestId><return>true</return></CreateTagsResponse>",
      "request_id": "f1ded3e7-d5bd-4dc0-a772-f0d95fadb6dc"
    },
    {
      "label": "snapshot_describe_before_replay",
      "service": "ec2",
      "operation": "DescribeRouteTables",
      "input": {
        "RouteTableIds": [
          "rtb-0345505fe340256b5"
        ]
      },
      "output": {
        "RouteTables": [
          {
            "Associations": [],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0345505fe340256b5",
            "Routes": [
              {
                "DestinationCidrBlock": "10.244.0.0/24",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
              }
            ],
            "Tags": [
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              },
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-current"
              },
              {
                "Key": "ReplayMutation",
                "Value": "current-state"
              }
            ],
            "VpcId": "vpc-04320d4f01d32b3c5",
            "OwnerId": "000000000000"
          }
        ]
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:31:21.724078+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DescribeRouteTablesResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>38cf04e9-c8ce-43c3-b6b3-5b403370f126</requestId><routeTableSet><item><routeTableId>rtb-0345505fe340256b5</routeTableId><vpcId>vpc-04320d4f01d32b3c5</vpcId><ownerId>000000000000</ownerId><routeSet><item><destinationCidrBlock>10.244.0.0/24</destinationCidrBlock><gatewayId>local</gatewayId><state>active</state><origin>CreateRouteTable</orig [...]
      "request_id": "38cf04e9-c8ce-43c3-b6b3-5b403370f126"
    },
    {
      "label": "snapshot_original_replay",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "ClientToken": "stackd-rt-token-fed997dae4-snapshot",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-snapshot"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              }
            ]
          }
        ]
      },
      "output": {
        "RouteTable": {
          "Associations": [],
          "PropagatingVgws": [],
          "RouteTableId": "rtb-0345505fe340256b5",
          "Routes": [
            {
              "DestinationCidrBlock": "10.244.0.0/24",
              "GatewayId": "local",
              "Origin": "CreateRouteTable",
              "State": "active"
            }
          ],
          "Tags": [
            {
              "Key": "Name",
              "Value": "stackd-rt-token-fed997dae4-snapshot"
            },
            {
              "Key": "stackd-probe",
              "Value": "stackd-rt-token-fed997dae4"
            }
          ],
          "VpcId": "vpc-04320d4f01d32b3c5",
          "OwnerId": "000000000000"
        },
        "ClientToken": "stackd-rt-token-fed997dae4-snapshot"
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:31:22.516576+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<CreateRouteTableResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>62d2f746-712e-416a-b892-d76843cdf1ce</requestId><routeTable><routeTableId>rtb-0345505fe340256b5</routeTableId><vpcId>vpc-04320d4f01d32b3c5</vpcId><ownerId>000000000000</ownerId><routeSet><item><destinationCidrBlock>10.244.0.0/24</destinationCidrBlock><gatewayId>local</gatewayId><state>active</state><origin>CreateRouteTable</origin></item></ [...]
      "request_id": "62d2f746-712e-416a-b892-d76843cdf1ce"
    },
    {
      "label": "snapshot_describe_after_replay",
      "service": "ec2",
      "operation": "DescribeRouteTables",
      "input": {
        "RouteTableIds": [
          "rtb-0345505fe340256b5"
        ]
      },
      "output": {
        "RouteTables": [
          {
            "Associations": [],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0345505fe340256b5",
            "Routes": [
              {
                "DestinationCidrBlock": "10.244.0.0/24",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
              }
            ],
            "Tags": [
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              },
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-current"
              },
              {
                "Key": "ReplayMutation",
                "Value": "current-state"
              }
            ],
            "VpcId": "vpc-04320d4f01d32b3c5",
            "OwnerId": "000000000000"
          }
        ]
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:31:23.479376+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DescribeRouteTablesResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>b4fd4479-b954-48d7-b8c9-a76ad42a54a5</requestId><routeTableSet><item><routeTableId>rtb-0345505fe340256b5</routeTableId><vpcId>vpc-04320d4f01d32b3c5</vpcId><ownerId>000000000000</ownerId><routeSet><item><destinationCidrBlock>10.244.0.0/24</destinationCidrBlock><gatewayId>local</gatewayId><state>active</state><origin>CreateRouteTable</orig [...]
      "request_id": "b4fd4479-b954-48d7-b8c9-a76ad42a54a5"
    },
    {
      "label": "same_token_reordered_tags",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "ClientToken": "stackd-rt-token-fed997dae4-snapshot",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              },
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-snapshot"
              }
            ]
          }
        ]
      },
      "output": {
        "Code": "IdempotentParameterMismatch",
        "Message": "Wrong arguments for request with token stackd-rt-token-fed997dae4-snapshot",
        "RequestID": "509f7422-243a-46c1-9fb4-a439ee3f3513"
      },
      "code": "IdempotentParameterMismatch",
      "http_status": 400,
      "started_at": "2026-09-16T11:31:24.293606+00:00",
      "message": "Wrong arguments for request with token stackd-rt-token-fed997dae4-snapshot",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>IdempotentParameterMismatch</Code><Message>Wrong arguments for request with token stackd-rt-token-fed997dae4-snapshot</Message></Error></Errors><RequestID>509f7422-243a-46c1-9fb4-a439ee3f3513</RequestID></Response>",
      "request_id": "509f7422-243a-46c1-9fb4-a439ee3f3513"
    },
    {
      "label": "same_token_omitted_tags",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "ClientToken": "stackd-rt-token-fed997dae4-snapshot"
      },
      "output": {
        "Code": "IdempotentParameterMismatch",
        "Message": "Wrong arguments for request with token stackd-rt-token-fed997dae4-snapshot",
        "RequestID": "f41f5a65-bb2f-4995-b327-c585595efe38"
      },
      "code": "IdempotentParameterMismatch",
      "http_status": 400,
      "started_at": "2026-09-16T11:31:25.120218+00:00",
      "message": "Wrong arguments for request with token stackd-rt-token-fed997dae4-snapshot",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>IdempotentParameterMismatch</Code><Message>Wrong arguments for request with token stackd-rt-token-fed997dae4-snapshot</Message></Error></Errors><RequestID>f41f5a65-bb2f-4995-b327-c585595efe38</RequestID></Response>",
      "request_id": "f41f5a65-bb2f-4995-b327-c585595efe38"
    },
    {
      "label": "case_changed_token_distinct_request",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "ClientToken": "STACKD-RT-TOKEN-FED997DAE4-SNAPSHOT",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-snapshot"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              }
            ]
          }
        ]
      },
      "output": {
        "Code": "InternalError",
        "Message": "An internal error has occurred",
        "RequestID": "73264874-a203-438b-9ed8-1c9253eb61e7"
      },
      "code": "InternalError",
      "http_status": 500,
      "started_at": "2026-09-16T11:31:25.955836+00:00",
      "message": "An internal error has occurred",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InternalError</Code><Message>An internal error has occurred</Message></Error></Errors><RequestID>73264874-a203-438b-9ed8-1c9253eb61e7</RequestID></Response>",
      "request_id": "73264874-a203-438b-9ed8-1c9253eb61e7"
    },
    {
      "label": "case_changed_token_retry_after_internal_error",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "ClientToken": "STACKD-RT-TOKEN-FED997DAE4-SNAPSHOT",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-snapshot"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              }
            ]
          }
        ]
      },
      "output": {
        "Code": "InternalError",
        "Message": "An internal error has occurred",
        "RequestID": "a2ec2c6b-3471-4995-83e6-e26500d316c9"
      },
      "code": "InternalError",
      "http_status": 500,
      "started_at": "2026-09-16T11:31:51.451554+00:00",
      "message": "An internal error has occurred",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InternalError</Code><Message>An internal error has occurred</Message></Error></Errors><RequestID>a2ec2c6b-3471-4995-83e6-e26500d316c9</RequestID></Response>",
      "request_id": "a2ec2c6b-3471-4995-83e6-e26500d316c9"
    },
    {
      "label": "owned_vpc_route_table_inventory",
      "service": "ec2",
      "operation": "DescribeRouteTables",
      "input": {
        "Filters": [
          {
            "Name": "vpc-id",
            "Values": [
              "vpc-04320d4f01d32b3c5",
              "vpc-0fb4e8a6530ecf902"
            ]
          }
        ]
      },
      "output": {
        "RouteTables": [
          {
            "Associations": [
              {
                "Main": true,
                "RouteTableAssociationId": "rtbassoc-05a364e4c6134cd9c",
                "RouteTableId": "rtb-0c498255d15603b5c",
                "AssociationState": {
                  "State": "associated"
                }
              }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0c498255d15603b5c",
            "Routes": [
              {
                "DestinationCidrBlock": "10.244.1.0/24",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
              }
            ],
            "Tags": [],
            "VpcId": "vpc-0fb4e8a6530ecf902",
            "OwnerId": "000000000000"
          },
          {
            "Associations": [],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0411c8dda856b8552",
            "Routes": [
              {
                "DestinationCidrBlock": "10.244.0.0/24",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
              }
            ],
            "Tags": [
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              },
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-bounds"
              }
            ],
            "VpcId": "vpc-04320d4f01d32b3c5",
            "OwnerId": "000000000000"
          },
          {
            "Associations": [],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0d257f728f70f4c43",
            "Routes": [
              {
                "DestinationCidrBlock": "10.244.0.0/24",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
              }
            ],
            "Tags": [
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              },
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-bounds"
              }
            ],
            "VpcId": "vpc-04320d4f01d32b3c5",
            "OwnerId": "000000000000"
          },
          {
            "Associations": [
              {
                "Main": true,
                "RouteTableAssociationId": "rtbassoc-048bbf3a267101b5a",
                "RouteTableId": "rtb-02fab5e13c7ef7898",
                "AssociationState": {
                  "State": "associated"
                }
              }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-02fab5e13c7ef7898",
            "Routes": [
              {
                "DestinationCidrBlock": "10.244.0.0/24",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
              }
            ],
            "Tags": [],
            "VpcId": "vpc-04320d4f01d32b3c5",
            "OwnerId": "000000000000"
          },
          {
            "Associations": [],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0345505fe340256b5",
            "Routes": [
              {
                "DestinationCidrBlock": "10.244.0.0/24",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
              }
            ],
            "Tags": [
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              },
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-current"
              },
              {
                "Key": "ReplayMutation",
                "Value": "current-state"
              }
            ],
            "VpcId": "vpc-04320d4f01d32b3c5",
            "OwnerId": "000000000000"
          },
          {
            "Associations": [],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-073bbf78f9bd70f2b",
            "Routes": [
              {
                "DestinationCidrBlock": "10.244.0.0/24",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
              }
            ],
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-bounds"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              }
            ],
            "VpcId": "vpc-04320d4f01d32b3c5",
            "OwnerId": "000000000000"
          }
        ]
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:31:54.279345+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DescribeRouteTablesResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>110915eb-8774-49cc-b38d-85a461932aa0</requestId><routeTableSet><item><routeTableId>rtb-0c498255d15603b5c</routeTableId><vpcId>vpc-0fb4e8a6530ecf902</vpcId><ownerId>000000000000</ownerId><routeSet><item><destinationCidrBlock>10.244.1.0/24</destinationCidrBlock><gatewayId>local</gatewayId><state>active</state><origin>CreateRouteTable</orig [...]
      "request_id": "110915eb-8774-49cc-b38d-85a461932aa0"
    },
    {
      "label": "fresh_uppercase_token",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-bounds"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              }
            ]
          }
        ],
        "ClientToken": "STACKD-FRESH-5DC8CEF4867D4C3590D3BAD35C57B7D6"
      },
      "output": {
        "RouteTable": {
          "Associations": [],
          "PropagatingVgws": [],
          "RouteTableId": "rtb-04d1ef14943df39d4",
          "Routes": [
            {
              "DestinationCidrBlock": "10.244.0.0/24",
              "GatewayId": "local",
              "Origin": "CreateRouteTable",
              "State": "active"
            }
          ],
          "Tags": [
            {
              "Key": "stackd-probe",
              "Value": "stackd-rt-token-fed997dae4"
            },
            {
              "Key": "Name",
              "Value": "stackd-rt-token-fed997dae4-bounds"
            }
          ],
          "VpcId": "vpc-04320d4f01d32b3c5",
          "OwnerId": "000000000000"
        },
        "ClientToken": "STACKD-FRESH-5DC8CEF4867D4C3590D3BAD35C57B7D6"
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:32:17.852547+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<CreateRouteTableResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>0a8a4c08-64a2-44b3-8242-b3fff7459cfd</requestId><routeTable><routeTableId>rtb-04d1ef14943df39d4</routeTableId><vpcId>vpc-04320d4f01d32b3c5</vpcId><ownerId>000000000000</ownerId><routeSet><item><destinationCidrBlock>10.244.0.0/24</destinationCidrBlock><gatewayId>local</gatewayId><state>active</state><origin>CreateRouteTable</origin></item></ [...]
      "request_id": "0a8a4c08-64a2-44b3-8242-b3fff7459cfd"
    },
    {
      "label": "lowercase_variant_of_fresh_uppercase",
      "service": "ec2",
      "operation": "CreateRouteTable",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5",
        "TagSpecifications": [
          {
            "ResourceType": "route-table",
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-bounds"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              }
            ]
          }
        ],
        "ClientToken": "stackd-fresh-5dc8cef4867d4c3590d3bad35c57b7d6"
      },
      "output": {
        "Code": "InternalError",
        "Message": "An internal error has occurred",
        "RequestID": "6452e61c-636a-4a26-9c10-2436bb78e855"
      },
      "code": "InternalError",
      "http_status": 500,
      "started_at": "2026-09-16T11:32:18.851235+00:00",
      "message": "An internal error has occurred",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InternalError</Code><Message>An internal error has occurred</Message></Error></Errors><RequestID>6452e61c-636a-4a26-9c10-2436bb78e855</RequestID></Response>",
      "request_id": "6452e61c-636a-4a26-9c10-2436bb78e855"
    },
    {
      "label": "cleanup_owned_route_table_inventory",
      "service": "ec2",
      "operation": "DescribeRouteTables",
      "input": {
        "Filters": [
          {
            "Name": "vpc-id",
            "Values": [
              "vpc-04320d4f01d32b3c5",
              "vpc-0fb4e8a6530ecf902"
            ]
          }
        ]
      },
      "output": {
        "RouteTables": [
          {
            "Associations": [
              {
                "Main": true,
                "RouteTableAssociationId": "rtbassoc-05a364e4c6134cd9c",
                "RouteTableId": "rtb-0c498255d15603b5c",
                "AssociationState": {
                  "State": "associated"
                }
              }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0c498255d15603b5c",
            "Routes": [
              {
                "DestinationCidrBlock": "10.244.1.0/24",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
              }
            ],
            "Tags": [],
            "VpcId": "vpc-0fb4e8a6530ecf902",
            "OwnerId": "000000000000"
          },
          {
            "Associations": [],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0411c8dda856b8552",
            "Routes": [
              {
                "DestinationCidrBlock": "10.244.0.0/24",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
              }
            ],
            "Tags": [
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              },
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-bounds"
              }
            ],
            "VpcId": "vpc-04320d4f01d32b3c5",
            "OwnerId": "000000000000"
          },
          {
            "Associations": [],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0d257f728f70f4c43",
            "Routes": [
              {
                "DestinationCidrBlock": "10.244.0.0/24",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
              }
            ],
            "Tags": [
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              },
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-bounds"
              }
            ],
            "VpcId": "vpc-04320d4f01d32b3c5",
            "OwnerId": "000000000000"
          },
          {
            "Associations": [
              {
                "Main": true,
                "RouteTableAssociationId": "rtbassoc-048bbf3a267101b5a",
                "RouteTableId": "rtb-02fab5e13c7ef7898",
                "AssociationState": {
                  "State": "associated"
                }
              }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-02fab5e13c7ef7898",
            "Routes": [
              {
                "DestinationCidrBlock": "10.244.0.0/24",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
              }
            ],
            "Tags": [],
            "VpcId": "vpc-04320d4f01d32b3c5",
            "OwnerId": "000000000000"
          },
          {
            "Associations": [],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0345505fe340256b5",
            "Routes": [
              {
                "DestinationCidrBlock": "10.244.0.0/24",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
              }
            ],
            "Tags": [
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              },
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-current"
              },
              {
                "Key": "ReplayMutation",
                "Value": "current-state"
              }
            ],
            "VpcId": "vpc-04320d4f01d32b3c5",
            "OwnerId": "000000000000"
          },
          {
            "Associations": [],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-04d1ef14943df39d4",
            "Routes": [
              {
                "DestinationCidrBlock": "10.244.0.0/24",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
              }
            ],
            "Tags": [
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              },
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-bounds"
              }
            ],
            "VpcId": "vpc-04320d4f01d32b3c5",
            "OwnerId": "000000000000"
          },
          {
            "Associations": [],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-073bbf78f9bd70f2b",
            "Routes": [
              {
                "DestinationCidrBlock": "10.244.0.0/24",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
              }
            ],
            "Tags": [
              {
                "Key": "Name",
                "Value": "stackd-rt-token-fed997dae4-bounds"
              },
              {
                "Key": "stackd-probe",
                "Value": "stackd-rt-token-fed997dae4"
              }
            ],
            "VpcId": "vpc-04320d4f01d32b3c5",
            "OwnerId": "000000000000"
          }
        ]
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:32:34.512640+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DescribeRouteTablesResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>d205746d-569e-4829-9fd2-9c4a321408c9</requestId><routeTableSet><item><routeTableId>rtb-0c498255d15603b5c</routeTableId><vpcId>vpc-0fb4e8a6530ecf902</vpcId><ownerId>000000000000</ownerId><routeSet><item><destinationCidrBlock>10.244.1.0/24</destinationCidrBlock><gatewayId>local</gatewayId><state>active</state><origin>CreateRouteTable</orig [...]
      "request_id": "d205746d-569e-4829-9fd2-9c4a321408c9"
    },
    {
      "label": "cleanup_delete_rtb-0411c8dda856b8552",
      "service": "ec2",
      "operation": "DeleteRouteTable",
      "input": {
        "RouteTableId": "rtb-0411c8dda856b8552"
      },
      "output": {},
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:32:35.377224+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DeleteRouteTableResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>3b8b19fd-3a48-4f31-a218-70d77b5f53a0</requestId><return>true</return></DeleteRouteTableResponse>",
      "request_id": "3b8b19fd-3a48-4f31-a218-70d77b5f53a0"
    },
    {
      "label": "cleanup_delete_rtb-0d257f728f70f4c43",
      "service": "ec2",
      "operation": "DeleteRouteTable",
      "input": {
        "RouteTableId": "rtb-0d257f728f70f4c43"
      },
      "output": {},
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:32:36.292907+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DeleteRouteTableResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>f5ee47be-fd85-4401-bc7e-4482896f9315</requestId><return>true</return></DeleteRouteTableResponse>",
      "request_id": "f5ee47be-fd85-4401-bc7e-4482896f9315"
    },
    {
      "label": "cleanup_delete_rtb-0345505fe340256b5",
      "service": "ec2",
      "operation": "DeleteRouteTable",
      "input": {
        "RouteTableId": "rtb-0345505fe340256b5"
      },
      "output": {},
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:32:37.204905+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DeleteRouteTableResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>f16b6052-0b4a-4186-8b55-50a6f97d20f8</requestId><return>true</return></DeleteRouteTableResponse>",
      "request_id": "f16b6052-0b4a-4186-8b55-50a6f97d20f8"
    },
    {
      "label": "cleanup_delete_rtb-04d1ef14943df39d4",
      "service": "ec2",
      "operation": "DeleteRouteTable",
      "input": {
        "RouteTableId": "rtb-04d1ef14943df39d4"
      },
      "output": {},
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:32:38.098773+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DeleteRouteTableResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>dbf3edf0-fdce-4f3f-8269-1cf95029408c</requestId><return>true</return></DeleteRouteTableResponse>",
      "request_id": "dbf3edf0-fdce-4f3f-8269-1cf95029408c"
    },
    {
      "label": "cleanup_delete_rtb-073bbf78f9bd70f2b",
      "service": "ec2",
      "operation": "DeleteRouteTable",
      "input": {
        "RouteTableId": "rtb-073bbf78f9bd70f2b"
      },
      "output": {},
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:32:38.956224+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DeleteRouteTableResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>b00ea83c-4ea1-44b9-b59b-2da10674ce20</requestId><return>true</return></DeleteRouteTableResponse>",
      "request_id": "b00ea83c-4ea1-44b9-b59b-2da10674ce20"
    },
    {
      "label": "cleanup_delete_vpc-04320d4f01d32b3c5",
      "service": "ec2",
      "operation": "DeleteVpc",
      "input": {
        "VpcId": "vpc-04320d4f01d32b3c5"
      },
      "output": {},
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:32:39.822391+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DeleteVpcResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>b5091cbf-ab76-4419-aa21-c0e162648ce6</requestId><return>true</return></DeleteVpcResponse>",
      "request_id": "b5091cbf-ab76-4419-aa21-c0e162648ce6"
    },
    {
      "label": "cleanup_delete_vpc-0fb4e8a6530ecf902",
      "service": "ec2",
      "operation": "DeleteVpc",
      "input": {
        "VpcId": "vpc-0fb4e8a6530ecf902"
      },
      "output": {},
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:32:40.941707+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DeleteVpcResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>6a43e982-d770-460f-b304-df0f7d26a34c</requestId><return>true</return></DeleteVpcResponse>",
      "request_id": "6a43e982-d770-460f-b304-df0f7d26a34c"
    },
    {
      "label": "cleanup_absence_rtb-02fab5e13c7ef7898",
      "service": "ec2",
      "operation": "DescribeRouteTables",
      "input": {
        "RouteTableIds": [
          "rtb-02fab5e13c7ef7898"
        ]
      },
      "output": {
        "Code": "InvalidRouteTableID.NotFound",
        "Message": "The routeTable ID 'rtb-02fab5e13c7ef7898' does not exist",
        "RequestID": "4de94223-f6cb-4800-a6ab-66f8d9ee8ed8"
      },
      "code": "InvalidRouteTableID.NotFound",
      "http_status": 400,
      "started_at": "2026-09-16T11:32:41.995976+00:00",
      "message": "The routeTable ID 'rtb-02fab5e13c7ef7898' does not exist",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InvalidRouteTableID.NotFound</Code><Message>The routeTable ID 'rtb-02fab5e13c7ef7898' does not exist</Message></Error></Errors><RequestID>4de94223-f6cb-4800-a6ab-66f8d9ee8ed8</RequestID></Response>",
      "request_id": "4de94223-f6cb-4800-a6ab-66f8d9ee8ed8"
    },
    {
      "label": "cleanup_absence_rtb-0345505fe340256b5",
      "service": "ec2",
      "operation": "DescribeRouteTables",
      "input": {
        "RouteTableIds": [
          "rtb-0345505fe340256b5"
        ]
      },
      "output": {
        "Code": "InvalidRouteTableID.NotFound",
        "Message": "The routeTable ID 'rtb-0345505fe340256b5' does not exist",
        "RequestID": "143cd22e-82a5-4261-b403-f92952b43f6b"
      },
      "code": "InvalidRouteTableID.NotFound",
      "http_status": 400,
      "started_at": "2026-09-16T11:32:42.764404+00:00",
      "message": "The routeTable ID 'rtb-0345505fe340256b5' does not exist",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InvalidRouteTableID.NotFound</Code><Message>The routeTable ID 'rtb-0345505fe340256b5' does not exist</Message></Error></Errors><RequestID>143cd22e-82a5-4261-b403-f92952b43f6b</RequestID></Response>",
      "request_id": "143cd22e-82a5-4261-b403-f92952b43f6b"
    },
    {
      "label": "cleanup_absence_rtb-0411c8dda856b8552",
      "service": "ec2",
      "operation": "DescribeRouteTables",
      "input": {
        "RouteTableIds": [
          "rtb-0411c8dda856b8552"
        ]
      },
      "output": {
        "Code": "InvalidRouteTableID.NotFound",
        "Message": "The routeTable ID 'rtb-0411c8dda856b8552' does not exist",
        "RequestID": "decbb8b6-c39c-447c-89d3-cb9cad63191d"
      },
      "code": "InvalidRouteTableID.NotFound",
      "http_status": 400,
      "started_at": "2026-09-16T11:32:43.529034+00:00",
      "message": "The routeTable ID 'rtb-0411c8dda856b8552' does not exist",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InvalidRouteTableID.NotFound</Code><Message>The routeTable ID 'rtb-0411c8dda856b8552' does not exist</Message></Error></Errors><RequestID>decbb8b6-c39c-447c-89d3-cb9cad63191d</RequestID></Response>",
      "request_id": "decbb8b6-c39c-447c-89d3-cb9cad63191d"
    },
    {
      "label": "cleanup_absence_rtb-04d1ef14943df39d4",
      "service": "ec2",
      "operation": "DescribeRouteTables",
      "input": {
        "RouteTableIds": [
          "rtb-04d1ef14943df39d4"
        ]
      },
      "output": {
        "Code": "InvalidRouteTableID.NotFound",
        "Message": "The routeTable ID 'rtb-04d1ef14943df39d4' does not exist",
        "RequestID": "0fd05cc9-5123-4719-8fdd-7535e75e2812"
      },
      "code": "InvalidRouteTableID.NotFound",
      "http_status": 400,
      "started_at": "2026-09-16T11:32:44.493963+00:00",
      "message": "The routeTable ID 'rtb-04d1ef14943df39d4' does not exist",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InvalidRouteTableID.NotFound</Code><Message>The routeTable ID 'rtb-04d1ef14943df39d4' does not exist</Message></Error></Errors><RequestID>0fd05cc9-5123-4719-8fdd-7535e75e2812</RequestID></Response>",
      "request_id": "0fd05cc9-5123-4719-8fdd-7535e75e2812"
    },
    {
      "label": "cleanup_absence_rtb-073bbf78f9bd70f2b",
      "service": "ec2",
      "operation": "DescribeRouteTables",
      "input": {
        "RouteTableIds": [
          "rtb-073bbf78f9bd70f2b"
        ]
      },
      "output": {
        "Code": "InvalidRouteTableID.NotFound",
        "Message": "The routeTable ID 'rtb-073bbf78f9bd70f2b' does not exist",
        "RequestID": "f8f799af-d510-45fd-ae5f-12bd2d27b3f1"
      },
      "code": "InvalidRouteTableID.NotFound",
      "http_status": 400,
      "started_at": "2026-09-16T11:32:45.282962+00:00",
      "message": "The routeTable ID 'rtb-073bbf78f9bd70f2b' does not exist",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InvalidRouteTableID.NotFound</Code><Message>The routeTable ID 'rtb-073bbf78f9bd70f2b' does not exist</Message></Error></Errors><RequestID>f8f799af-d510-45fd-ae5f-12bd2d27b3f1</RequestID></Response>",
      "request_id": "f8f799af-d510-45fd-ae5f-12bd2d27b3f1"
    },
    {
      "label": "cleanup_absence_rtb-0c498255d15603b5c",
      "service": "ec2",
      "operation": "DescribeRouteTables",
      "input": {
        "RouteTableIds": [
          "rtb-0c498255d15603b5c"
        ]
      },
      "output": {
        "Code": "InvalidRouteTableID.NotFound",
        "Message": "The routeTable ID 'rtb-0c498255d15603b5c' does not exist",
        "RequestID": "69359364-2ca7-4086-997f-6c3a7c3208f5"
      },
      "code": "InvalidRouteTableID.NotFound",
      "http_status": 400,
      "started_at": "2026-09-16T11:32:46.066549+00:00",
      "message": "The routeTable ID 'rtb-0c498255d15603b5c' does not exist",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InvalidRouteTableID.NotFound</Code><Message>The routeTable ID 'rtb-0c498255d15603b5c' does not exist</Message></Error></Errors><RequestID>69359364-2ca7-4086-997f-6c3a7c3208f5</RequestID></Response>",
      "request_id": "69359364-2ca7-4086-997f-6c3a7c3208f5"
    },
    {
      "label": "cleanup_absence_rtb-0d257f728f70f4c43",
      "service": "ec2",
      "operation": "DescribeRouteTables",
      "input": {
        "RouteTableIds": [
          "rtb-0d257f728f70f4c43"
        ]
      },
      "output": {
        "Code": "InvalidRouteTableID.NotFound",
        "Message": "The routeTable ID 'rtb-0d257f728f70f4c43' does not exist",
        "RequestID": "fe369899-241d-441b-a463-87219386692f"
      },
      "code": "InvalidRouteTableID.NotFound",
      "http_status": 400,
      "started_at": "2026-09-16T11:32:46.894900+00:00",
      "message": "The routeTable ID 'rtb-0d257f728f70f4c43' does not exist",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InvalidRouteTableID.NotFound</Code><Message>The routeTable ID 'rtb-0d257f728f70f4c43' does not exist</Message></Error></Errors><RequestID>fe369899-241d-441b-a463-87219386692f</RequestID></Response>",
      "request_id": "fe369899-241d-441b-a463-87219386692f"
    },
    {
      "label": "cleanup_absence_rtb-0d2b08e3576252150",
      "service": "ec2",
      "operation": "DescribeRouteTables",
      "input": {
        "RouteTableIds": [
          "rtb-0d2b08e3576252150"
        ]
      },
      "output": {
        "Code": "InvalidRouteTableID.NotFound",
        "Message": "The routeTable ID 'rtb-0d2b08e3576252150' does not exist",
        "RequestID": "fa6fb6fa-8808-451c-a263-5b67ca956557"
      },
      "code": "InvalidRouteTableID.NotFound",
      "http_status": 400,
      "started_at": "2026-09-16T11:32:47.664214+00:00",
      "message": "The routeTable ID 'rtb-0d2b08e3576252150' does not exist",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InvalidRouteTableID.NotFound</Code><Message>The routeTable ID 'rtb-0d2b08e3576252150' does not exist</Message></Error></Errors><RequestID>fa6fb6fa-8808-451c-a263-5b67ca956557</RequestID></Response>",
      "request_id": "fa6fb6fa-8808-451c-a263-5b67ca956557"
    },
    {
      "label": "cleanup_absence_vpc-04320d4f01d32b3c5",
      "service": "ec2",
      "operation": "DescribeVpcs",
      "input": {
        "VpcIds": [
          "vpc-04320d4f01d32b3c5"
        ]
      },
      "output": {
        "Code": "InvalidVpcID.NotFound",
        "Message": "The vpc ID 'vpc-04320d4f01d32b3c5' does not exist",
        "RequestID": "d6f05256-ad00-4d0c-abb0-a8c5e25c79fb"
      },
      "code": "InvalidVpcID.NotFound",
      "http_status": 400,
      "started_at": "2026-09-16T11:32:48.441215+00:00",
      "message": "The vpc ID 'vpc-04320d4f01d32b3c5' does not exist",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InvalidVpcID.NotFound</Code><Message>The vpc ID 'vpc-04320d4f01d32b3c5' does not exist</Message></Error></Errors><RequestID>d6f05256-ad00-4d0c-abb0-a8c5e25c79fb</RequestID></Response>",
      "request_id": "d6f05256-ad00-4d0c-abb0-a8c5e25c79fb"
    },
    {
      "label": "cleanup_absence_vpc-0fb4e8a6530ecf902",
      "service": "ec2",
      "operation": "DescribeVpcs",
      "input": {
        "VpcIds": [
          "vpc-0fb4e8a6530ecf902"
        ]
      },
      "output": {
        "Code": "InvalidVpcID.NotFound",
        "Message": "The vpc ID 'vpc-0fb4e8a6530ecf902' does not exist",
        "RequestID": "a245e9b7-f9fc-4052-ae07-85ac6312d3d4"
      },
      "code": "InvalidVpcID.NotFound",
      "http_status": 400,
      "started_at": "2026-09-16T11:32:49.251616+00:00",
      "message": "The vpc ID 'vpc-0fb4e8a6530ecf902' does not exist",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>InvalidVpcID.NotFound</Code><Message>The vpc ID 'vpc-0fb4e8a6530ecf902' does not exist</Message></Error></Errors><RequestID>a245e9b7-f9fc-4052-ae07-85ac6312d3d4</RequestID></Response>",
      "request_id": "a245e9b7-f9fc-4052-ae07-85ac6312d3d4"
    },
    {
      "label": "cleanup_empty_owned_DescribeRouteTables",
      "service": "ec2",
      "operation": "DescribeRouteTables",
      "input": {
        "Filters": [
          {
            "Name": "tag:stackd-probe",
            "Values": [
              "stackd-rt-token-fed997dae4"
            ]
          },
          {
            "Name": "vpc-id",
            "Values": [
              "vpc-04320d4f01d32b3c5",
              "vpc-0fb4e8a6530ecf902"
            ]
          }
        ]
      },
      "output": {
        "RouteTables": []
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:32:50.020264+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DescribeRouteTablesResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>badd9f86-9455-49ae-909e-0a5af7db9803</requestId><routeTableSet/></DescribeRouteTablesResponse>",
      "request_id": "badd9f86-9455-49ae-909e-0a5af7db9803"
    },
    {
      "label": "cleanup_empty_owned_DescribeVpcs",
      "service": "ec2",
      "operation": "DescribeVpcs",
      "input": {
        "Filters": [
          {
            "Name": "tag:stackd-probe",
            "Values": [
              "stackd-rt-token-fed997dae4"
            ]
          },
          {
            "Name": "vpc-id",
            "Values": [
              "vpc-04320d4f01d32b3c5",
              "vpc-0fb4e8a6530ecf902"
            ]
          }
        ]
      },
      "output": {
        "Vpcs": []
      },
      "code": "Success",
      "http_status": 200,
      "started_at": "2026-09-16T11:32:50.808382+00:00",
      "rawResponseBody": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DescribeVpcsResponse xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\"><requestId>9bee0ce7-9c8a-48d7-a7f5-2e3b50135aa1</requestId><vpcSet/></DescribeVpcsResponse>",
      "request_id": "9bee0ce7-9c8a-48d7-a7f5-2e3b50135aa1"
    }
  ],
  "Findings": {
    "account": "000000000000",
    "region": "us-east-1",
    "identical_request": "An explicit token is echoed in ClientToken and in XML clientToken. Repeating identical input returns the same RouteTableId without a second route table.",
    "parameter_mismatch": "Changing tags, omitting previously provided tags, reordering the Tags array, or changing VpcId under the original token returns HTTP400 IdempotentParameterMismatch. VPC scope was distinguished using a second owned VPC; token identity is not per VPC.",
    "mutation_replay": "After CreateTags, DescribeRouteTables shows the new Name and ReplayMutation tag. Replaying the original create input returns the original creation tags, not current tags. A subsequent DescribeRouteTables still shows mutated tags: replay projects a retained creation snapshot and does not overwrite current resource state. Tag ordering in replay output can differ from initial output.",
    "deleted_resource_replay": {
      "code": "IdempotentParameterMismatch",
      "http_status": 400,
      "message": "An error occurred (IdempotentParameterMismatch) when calling this operation: The client token and arguments used in this request were used in a prior request that was associated with a resource which is now deleted.",
      "result": "Identical token replay after DeleteRouteTable does not recreate the route table and does not return the old successful object. Describe of the original ID remains InvalidRouteTableID.NotFound."
    },
    "token_bounds": {
      "empty": "HTTP400 InvalidParameterValue, repeated empty input has the same rejection",
      "single_space": "Accepted, HTTP200",
      "non_ascii_e_acute": "HTTP400 InvalidParameterValue",
      "ascii_length_64": "Accepted, HTTP200",
      "ascii_length_65": "HTTP400 InvalidParameterValue",
      "embedded_tab": "Accepted, HTTP200",
      "documentation": "Primary EC2 idempotency guide specifies unique, case-sensitive string up to 64 ASCII characters. These probes support nonempty length 1..64 ASCII admission and show whitespace/control tab is not categorically forbidden; not every ASCII code point was enumerated."
    },
    "case_variant_anomaly": "A new uppercase token succeeds. Changing only token case after a successful lowercase or uppercase original returns native HTTP500 InternalError, not success/mismatch. Uppercase variant of the first successful snapshot token was retried once and again returned InternalError. Retained as observed anomaly conflicting with a simple application of documented case-sensitive distinctness; do not infer token normalization or persist a modeled InternalError policy from this  [...]
    "expiration": "Unknown. A short same-session capture cannot establish token retention lifetime, expiration, or persistence across AWS service restarts. No TTL is inferred.",
    "regional_scope": "The primary EC2 idempotency guide documents regional requests as reusable in another Region and distinguishes zonal requests by AvailabilityZone. CreateRouteTable has VpcId and no AvailabilityZone parameter. No cross-region probe was needed or performed; cross-region token reuse is documentation-grounded, not independently observed here.",
    "limits": "No account-crossing, token expiration, omitted-token direct wire behavior, numeric/non-string query token coercion, or exhaustive ASCII enumeration was probed.",
    "capture_isolation": "Initial VPC and token use the simultaneously running ACL probe prefix because task agents shared an Eval kernel. The route-table agent owned and cleaned the distinct VPC IDs recorded here, preserved the exact initial inputs, isolated its namespace, and used a new route-specific prefix thereafter. There was no shared VPC/resource mutation."
  },
  "Cleanup": {
    "completed": true,
    "owned_vpc_ids": [
      "vpc-04320d4f01d32b3c5",
      "vpc-0fb4e8a6530ecf902"
    ],
    "created_route_table_ids": [
      "rtb-0345505fe340256b5",
      "rtb-0411c8dda856b8552",
      "rtb-04d1ef14943df39d4",
      "rtb-073bbf78f9bd70f2b",
      "rtb-0d257f728f70f4c43",
      "rtb-0d2b08e3576252150"
    ],
    "all_route_table_ids_including_implicit_main": [
      "rtb-02fab5e13c7ef7898",
      "rtb-0345505fe340256b5",
      "rtb-0411c8dda856b8552",
      "rtb-04d1ef14943df39d4",
      "rtb-073bbf78f9bd70f2b",
      "rtb-0c498255d15603b5c",
      "rtb-0d257f728f70f4c43",
      "rtb-0d2b08e3576252150"
    ],
    "confirmation": "Every owned VPC, every created route table, and each implicit main route table was individually described after deletion and returned its service-specific NotFound. Final scoped inventories were empty.",
    "unexpected_create_outcomes": "Inventories of both owned VPCs captured and cleaned every non-main route table, including any that might have arisen from HTTP500 create outcomes; no untracked custom route tables existed.",
    "preexisting_resources": "The observed DhcpOptionsId is preexisting shared metadata and was neither modified nor deleted. No default/preexisting VPC or resources outside owned VPCs were changed.",
    "cost_scope": "Only VPC, route table and tag APIs; no compute, public address allocation, gateways, endpoints or billed networking.",
    "probe_scripts": "No probe script files were created; in-memory throwaway capture only.",
    "local_validation": "No formatter, build, linter or local test command was run."
  }
}
